# rfc6381-codec

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: fuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/seeds/fuzz_target_1/: avc1  avc1_lower  mp4a  mp4a_short  unknown
src/: lib.rs
