[package]
name = "rfc6381-codec"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp4ra-rust = "0.1.0"
four-cc = "0.1.0"
mpeg4-audio-const = "0.2.0"

[dev-dependencies]
assert_matches = "1.3"