[package]
name = "rfc6381-codec"
version = "0.1.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2021"
description = "Parser and generator for codec-string values, as specified in RFC 6381, section 3"
categories = [ "multimedia::video", "parser-implementations" ]
keywords = [ "RFC6381" ]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/dholroyd/rfc6381-codec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp4ra-rust = "0.1.0"
four-cc = "0.3.0"
mpeg4-audio-const = "0.2.0"

[dev-dependencies]
assert_matches = "1.3"
